workspace/compiler/tests/snapshots/test_snap_rust__rust_behavior_trait_render.snap
---
source: workspace/compiler/tests/snap_rust.rs
expression: rendered
---
pub trait Behavior {
    fn describe(&self) -> &''static String;
}
