workspace/compiler/tests/snapshots/test_snap_rust__rust_binary_workspace_ir.snap
---
source: workspace/compiler/tests/snap_rust.rs
assertion_line: 354
expression: stubs
---
{
    "app": EntryStub {
        kind: "module",
        name: "app",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "app::main": EntryStub {
        kind: "function",
        name: "main",
        visibility: "priv",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: Some(
            (
                None,
                None,
            ),
        ),
    },
    "corelib": EntryStub {
        kind: "module",
        name: "corelib",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "corelib::CoreCounter": EntryStub {
        kind: "record",
        name: "CoreCounter",
        visibility: "pub",
        sealed: None,
        method_count: Some(
            2,
        ),
        protocols: Some(
            [],
        ),
        deprecation: None,
    },
    "corelib::CoreCounter::new": EntryStub {
        kind: "function",
        name: "new",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: Some(
            (
                None,
                None,
            ),
        ),
    },
    "corelib::CoreCounter::value": EntryStub {
        kind: "function",
        name: "value",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: Some(
            (
                None,
                None,
            ),
        ),
    },
}
