workspace/compiler/tests/snapshots/test_snap_rust__rust_blanket_view_render.snap
---
source: workspace/compiler/tests/snap_rust.rs
expression: rendered
---
pub trait BlanketView {
    fn view(&self) -> &View;
}
