workspace/compiler/tests/snapshots/test_snap_rust__rust_core_counter_render.snap
---
source: workspace/compiler/tests/snap_rust.rs
expression: rendered
---
pub struct CoreCounter {
    pub(crate) value: isize,
}
