workspace/compiler/tests/snapshots/test_snap_rust__rust_counter_render_w40.snap
---
source: workspace/compiler/tests/snap_rust.rs
assertion_line: 458
expression: rendered
---
pub struct Counter {
    value: i32,
}
