workspace/compiler/tests/snapshots/test_snap_rust__rust_counter_render_w80.snap
---
source: workspace/compiler/tests/snap_rust.rs
expression: rendered
---
pub struct Counter {
    pub(crate) value: isize,
}
