workspace/compiler/tests/snapshots/test_snap_rust__rust_deprecated_fn_render.snap
---
source: workspace/compiler/tests/snap_rust.rs
expression: rendered
---
/// Superseded arithmetic helper.
#[deprecated(since = "0.1.0", note = "use add instead")]
pub fn legacy_add(left: isize, right: isize) -> isize;
