workspace/compiler/tests/snapshots/test_snap_rust__rust_mode_enum_render.snap
---
source: workspace/compiler/tests/snap_rust.rs
expression: rendered
---
pub enum Mode {
    Fast,
    Careful,
}
