workspace/compiler/tests/snapshots/test_snap_rust__rust_open_trait_render.snap
---
source: workspace/compiler/tests/snap_rust.rs
expression: rendered
---
/// An open trait: its only supertrait is public, so it is not sealed.
pub trait OpenTrait {
    fn kind(&self) -> u8;
}
