workspace/compiler/tests/snapshots/test_snap_rust__rust_regular_ir.snap
---
source: workspace/compiler/tests/snap_rust.rs
expression: stubs
---
{
    "calculator": EntryStub {
        kind: "module",
        name: "calculator",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "calculator::<impl BlanketView>": EntryStub {
        kind: "trait_impl",
        name: "<impl BlanketView>",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "calculator::<impl Marker>": EntryStub {
        kind: "trait_impl",
        name: "<impl Marker>",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "calculator::BlanketView": EntryStub {
        kind: "trait_def",
        name: "BlanketView",
        visibility: "pub",
        sealed: Some(
            Some(
                false,
            ),
        ),
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "calculator::Counter": EntryStub {
        kind: "record",
        name: "Counter",
        visibility: "pub",
        sealed: None,
        method_count: Some(
            4,
        ),
        protocols: Some(
            [
                "calculator::BlanketView",
                "ext::helper::Marker",
            ],
        ),
        deprecation: None,
    },
    "calculator::OpenTrait": EntryStub {
        kind: "trait_def",
        name: "OpenTrait",
        visibility: "pub",
        sealed: Some(
            Some(
                false,
            ),
        ),
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "calculator::SealedTrait": EntryStub {
        kind: "trait_def",
        name: "SealedTrait",
        visibility: "pub",
        sealed: Some(
            Some(
                true,
            ),
        ),
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "calculator::add": EntryStub {
        kind: "function",
        name: "add",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: Some(
            (
                None,
                None,
            ),
        ),
    },
    "calculator::internals": EntryStub {
        kind: "module",
        name: "internals",
        visibility: "pub(crate)",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "calculator::internals::HiddenCounter": EntryStub {
        kind: "record",
        name: "HiddenCounter",
        visibility: "pub(crate)",
        sealed: None,
        method_count: Some(
            3,
        ),
        protocols: Some(
            [
                "calculator::BlanketView",
            ],
        ),
        deprecation: None,
    },
    "calculator::legacy_add": EntryStub {
        kind: "function",
        name: "legacy_add",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: Some(
            (
                Some(
                    "0.1.0",
                ),
                Some(
                    "use add instead",
                ),
            ),
        ),
    },
    "calculator::sealed_marker": EntryStub {
        kind: "module",
        name: "sealed_marker",
        visibility: "pub(crate)",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "calculator::sealed_marker::Sealed": EntryStub {
        kind: "trait_def",
        name: "Sealed",
        visibility: "pub",
        sealed: Some(
            Some(
                false,
            ),
        ),
        method_count: None,
        protocols: None,
        deprecation: None,
    },
}
