workspace/compiler/tests/snapshots/test_snap_rust__rust_regular_render_w80.snap
---
source: workspace/compiler/tests/snap_rust.rs
assertion_line: 368
expression: rendered
---
// calculator::BlanketView
pub trait BlanketView {
    fn view(&self) -> &View;
}

// calculator::BlanketView::View
type View = _;

// calculator::BlanketView::view
pub fn view(&self) -> &View;

// calculator::Counter
pub struct Counter {
    value: i32,
}

// calculator::Counter::increment
pub fn increment(&mut self) -> ();

// calculator::Counter::new
pub fn new(value: i32) -> Self;

// calculator::Counter::value
pub fn value(&self) -> i32;

// calculator::Counter::view
fn view(&self) -> &View;

// calculator::OpenTrait
/// An open trait: its only supertrait is public, so it is not sealed.
pub trait OpenTrait {
    fn kind(&self) -> u8;
}

// calculator::OpenTrait::kind
pub fn kind(&self) -> u8;

// calculator::SealedTrait
/// A sealed trait: downstream crates cannot implement it because its `Sealed`
/// supertrait lives in a private module.
pub trait SealedTrait {
    fn describe(&self) -> &''static str;
}

// calculator::SealedTrait::describe
pub fn describe(&self) -> &''static str;

// calculator::add
pub fn add(left: i32, right: i32) -> i32;

// calculator::internals::HiddenCounter
pub(crate) struct HiddenCounter {
    value: i32,
}

// calculator::internals::HiddenCounter::new
pub(crate) fn new(value: i32) -> Self;

// calculator::internals::HiddenCounter::value
pub(crate) fn value(&self) -> i32;

// calculator::internals::HiddenCounter::view
fn view(&self) -> &View;

// calculator::legacy_add
/// Superseded arithmetic helper.
#[deprecated(since = "0.1.0", note = "use add instead")]
pub fn legacy_add(left: i32, right: i32) -> i32;

// calculator::sealed_marker::Sealed
pub trait Sealed {}
